Finalização da entidade MovimentacaoEstoque